# Cosmetic_Robot_3D_Digital_Face

./: .gitignore  LICENSE  README.md
data/: 1695887446.1352828.p  1695887566.3694909.p  1695892331.6131043.p  (+5 more)
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/: CMakeLists.txt
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/data/camparam/: camparam.yaml
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/doc/: 3DCamera-en.chm  3DCamera-zh.chm  ReleaseNote.txt
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/doc/outdir/: #IDXHDR  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  $FIftiMain  3_d_camera_8hpp.html  3_d_camera_8hpp_source.html  _a_p_i_export_8hpp.html  _a_p_i_export_8hpp_source.html  _camera_8hpp.html  _camera_8hpp_source.html  _example_8hpp.html  _example_8hpp_source.html  _frame_8hpp.html  _frame_8hpp_source.html  _hand_eye_8hpp.html  _hand_eye_8hpp_source.html  _hand_eye_input_8hpp.html  _hand_eye_input_8hpp_source.html  _processing_8hpp.html  _processing_8hpp_source.html  _sample_h_d_r_8cpp-example.html  _sample_hand_eye_8cpp-example.html  _sample_live_depth_callback_8cpp-example.html  _sample_live_depth_i_r_callback_8cpp-example.html  _sample_live_depth_manual_query_8cpp-example.html  _sample_live_rgb_auto_exposure_8cpp-example.html  _sample_live_rgb_callback_8cpp-example.html  _sample_live_rgb_manual_query_8cpp-example.html  _sample_multi_camera_8cpp-example.html  _sample_point_reconstruction_8cpp-example.html  _sample_set_and_get_user_data_8cpp-example.html  _sample_soft_trigger_8cpp-example.html  _sample_system_query_cameras_8cpp-example.html  _system_8hpp.html  _system_8hpp_source.html  _types_8hpp.html  (+52 more)
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/env/: env.cmake  env_linux_aarch64.sh  env_linux_arm.sh  env_linux_x64.sh
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/inc/3dcamera/: 3DCamera.h  3DCamera.hpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/inc/handEye/: handEye.hpp  handEyeInput.hpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/: CMakeLists.txt
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleHDR/: SampleHDR.cpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleHandEye/: SampleHandEye.cpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleHandEyeOffline/: SampleHandEyeOffline.cpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleHandEyeReconstructPoints/: SampleHandEyeReconstructPoints.cpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleLiveDepthCallback/: SampleLiveDepthCallback.cpp
face_model/chishine3d_sdk/3DCameraSDK-v3.2.20.20230411/src/SampleLiveDepthIRCallback/: SampleLiveDepthIRCallback.cpp
(+252 files in other folders)
